# iroha-ed25519

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  MAINTAINERS.md  README.md  appveyor.yml  exportmap  linker_exportmap  sonar-project.properties
.github/: settings.yaml  settings.yml
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: analysis.cmake  coverage.cmake  dependencies.cmake  ed25519_add_fuzz.cmake  ed25519_add_library.cmake  ed25519_add_test.cmake  ed25519_export.cmake  ed25519_init.cmake  ed25519_merge_libraries.cmake  ed25519_select_supported_impl.cmake  ed25519_target_link_libraries.cmake  functions.cmake
cmake/Modules/: Findbenchmark.cmake  Findgtest.cmake
docker/develop/: Dockerfile
example/: CMakeLists.txt  main.c
example/sign-verify/: CMakeLists.txt  main.c
example/tosha3/: CMakeLists.txt
fuzzing/: CMakeLists.txt  fuzz_sign.cc
housekeeping/: all.sh  coverage.sh  cppcheck.sh  install_deps_linux.sh  install_deps_macos.sh  sonar.sh  valgrind.sh
include/ed25519/: ed25519.h  randombytes.h  sha512.h
include/ed25519/ed25519/: crypto_verify.h  ed25519.h  ed25519_export.h  randombytes.h  sha256.h  sha512.h  sha_context.h  unused.h
lib/: CMakeLists.txt
lib/ed25519/: CMakeLists.txt  README.md
lib/ed25519/amd64-64-24k/: CMakeLists.txt  README.md  ed25519.c
lib/ed25519/amd64-64-24k-pic/: CMakeLists.txt  ed25519.c  hram.c
lib/ed25519/ref10/: CMakeLists.txt  README.md  ed25519.c  fe.h  fe_frombytes.c  fe_isnonzero.c  fe_mul.c  fe_sq.c  fe_sq2.c  fe_tobytes.c  ge_scalarmult_base.c  sc_muladd.c  sc_reduce.c
lib/hash/: CMakeLists.txt  config_sha256.h.in  config_sha512.h.in
lib/hash/sha2_openssl/: CMakeLists.txt  sha256.c  sha512.c
lib/hash/sha2_sphlib/: CMakeLists.txt  md_helper.i  sha2.c  sha2_256.c  sha2_512.c  sha2_big.c  sph_sha2.h  sph_types.h
lib/hash/sha3_brainhub/: CMakeLists.txt  sha3.c  sha3.h  sha3_256.c  sha3_512.c
lib/helpers/: crypto_verify.h
lib/randombytes/: CMakeLists.txt
lib/randombytes/bcryptgen/: CMakeLists.txt  randombytes.c
lib/randombytes/bcryptgenrandom/: CMakeLists.txt  random.c  randombytes.c
lib/randombytes/openssl/: CMakeLists.txt  randombytes.c
lib/randombytes/random/: CMakeLists.txt  random.c
lib/randombytes/urandom/: CMakeLists.txt  urandom.c
src/: CMakeLists.txt  ed25519.c
test/: CMakeLists.txt
test/ed25519/: CMakeLists.txt  README.md  ed25519_test.cpp
test/ed25519/tosha3/: CMakeLists.txt  edsha3test.c  helpers.hpp  tosha3.cpp
test/hash/: CMakeLists.txt  sha2.input.txt  sha3.input  sha3.input.txt  sha_test.cpp
test/randombytes/: CMakeLists.txt  random.cpp
util/: helpers.hpp  hexutil.hpp
util/tosha3/: CMakeLists.txt  tosha3.cpp
