find_package(OpenSSL REQUIRED)

set(LIB sha2_openssl)
add_library(${LIB} OBJECT
    sha256.c
    sha512.c
    )
target_link_libraries(${LIB}
    ${OPENSSL_CRYPTO_LIBRARY}
    )
target_include_directories(${LIB} PUBLIC
    ${OPENSSL_INCLUDE_DIR}
    )

set_target_properties(${LIB} PROPERTIES EXCLUDE_FROM_ALL TRUE)

set(CMAKE_REQUIRED_INCLUDES "${OPENSSL_INCLUDE_DIR}" PARENT_SCOPE)
set(CMAKE_REQUIRED_LIBRARIES "${OPENSSL_CRYPTO_LIBRARY}" PARENT_SCOPE)
set(CMAKE_EXTRA_INCLUDE_FILES openssl/sha.h PARENT_SCOPE)
set(SHA_256_CONTEXT_TYPE "SHA256_CTX" PARENT_SCOPE)
set(SHA_512_CONTEXT_TYPE "SHA512_CTX" PARENT_SCOPE)
