set(LIB sha3_brainhub)
add_library(${LIB} OBJECT
    sha3.c
    sha3_256.c
    sha3_512.c
    )
set_target_properties(${LIB} PROPERTIES EXCLUDE_FROM_ALL TRUE)

set(CMAKE_REQUIRED_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
set(CMAKE_EXTRA_INCLUDE_FILES sha3.h PARENT_SCOPE)
set(SHA_256_CONTEXT_TYPE "sha3_context" PARENT_SCOPE)
set(SHA_512_CONTEXT_TYPE "sha3_context" PARENT_SCOPE)
